Actualizar diseño e incluir test de autoestima

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
   <div class="contenedor">
     <h1 class="titulo">Respira</h1>
     <p class="subtitulo">Tu app de apoyo emocional para los días difíciles.</p>
-    <button class="boton" onclick="window.location.href='evaluacion.html'">Comenzar</button>
-  </div>
 
-  <script>
-    function empezar() {
-      alert("¡Bienvenido a Respira!");
-      // acá podrías redirigir a otra página
-      // window.location.href = "menu.html";
-    }
-  </script>
+    <div class="opcion-formulario">
+      <a href="evaluacion.html" class="boton">Evaluación de Ansiedad</a>
+    </div>
+    <div class="opcion-formulario">
+      <a href="depresion.html" class="boton">Evaluación de Depresión</a>
+    </div>
+    <div class="opcion-formulario">
+      <a href="autoestima.html" class="boton">Evaluación de Autoestima</a>
+    </div>
+  </div>
 </body>
 </html>
+
+
+
