--- a/audio1.html
+++ b/audio1.html
@@ -8,31 +8,14 @@
 </head>
 <body>
   <div class="contenedor">
-    <h2>Relajación Guiada para la Ansiedad</h2>
-    <p>Disfrutá de esta meditación guiada para calmar la mente:</p>
+    <h2>Audio Guiado de Relajación</h2>
+    <p>Escuchá este video cuando sientas ansiedad o necesites un momento de calma:</p>
+    
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/HyPfVdMCG5Q" 
+    title="Audio guiado" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <iframe width="100%" height="315"
-      src="https://www.youtube.com/embed/pDigD65kLpE"
-      title="Meditación Guiada para CALMAR LA MENTE"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
-
-    <br /><br />
-    <a href="TecnicasAnsiedad.html" class="boton">Volver a Técnicas</a>
+    <a href="TecnicasAnsiedad.html" class="boton" style="margin-top: 30px; display: inline-block;">Volver a técnicas</a>
   </div>
 </body>
 </html>
 
-
-    <audio controls>
-      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-      Tu navegador no soporta el elemento de audio.
-    </audio>
-
-    <br/><br/>
-    <a href="TecnicasAnsiedad.html" class="boton">Volver a Técnicas</a>
-  </div>
-</body>
-</html>
