--- a/TecnicasAnsiedad.html
+++ b/TecnicasAnsiedad.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plan de Técnicas para la Ansiedad</title>
-  <link rel="stylesheet" href="stylo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Técnicas para la Ansiedad</title>
+  <link rel="stylesheet" href="stylo.css" />
 </head>
 <body>
   <div class="contenedor">
-    <h1 class="titulo">Plan de Técnicas para la Ansiedad</h1>
-    <p class="subtitulo">Aplicá una técnica por semana para reducir los síntomas de ansiedad.</p>
+    <h2>Técnicas Semanales para Reducir la Ansiedad</h2>
+    <p>Seleccioná una técnica para trabajar esta semana:</p>
 
-    <div class="pregunta">
-      <h2>🗓️ Semana 1: Respiración diafragmática</h2>
-      <p>Reducí tu activación fisiológica con esta técnica de respiración lenta y profunda. Practicá dos veces al día durante 5 minutos.</p>
-      <a class="boton" href="audio/respiracion.mp3" target="_blank">🎧 Audio Guiado</a>
-    </div>
+    <ul style="text-align: left;">
+      <li><strong>Semana 1:</strong> Respiración diafragmática</li>
+      <li><strong>Semana 2:</strong> Reestructuración cognitiva</li>
+      <li><strong>Semana 3:</strong> Técnica de solución de problemas</li>
+      <li><strong>Semana 4:</strong> Exposición gradual a situaciones evitadas</li>
+    </ul>
 
-    <div class="pregunta">
-      <h2>🗓️ Semana 2: Técnica 5-4-3-2-1</h2>
-      <p>Una estrategia efectiva para anclarte al presente cuando sentís ansiedad intensa. Seguís los 5 sentidos para calmarte.</p>
-      <a class="boton" href="audio/54321.mp3" target="_blank">🎧 Audio de Ejemplo</a>
-    </div>
-
-    <div class="pregunta">
-      <h2>🗓️ Semana 3: Reestructuración Cognitiva</h2>
-      <p>Identificá pensamientos negativos, cuestionalos y transformalos por ideas más realistas. Ideal para pensamientos automáticos ansiosos.</p>
-      <a class="boton" href="pdf/reestructuracion.pdf" target="_blank">📄 Ver Guía</a>
-    </div>
-
-    <div class="pregunta">
-      <h2>🗓️ Semana 4: Exposición Gradual</h2>
-      <p>Creá una lista de situaciones que evitás por ansiedad. Empezá por las más fáciles y registrá tus progresos.</p>
-      <a class="boton" href="pdf/exposicion.pdf" target="_blank">📄 Plan Personal</a>
-    </div>
-
-    <a class="boton" href="index.html">Volver al inicio</a>
+    <br />
+    <a href="audio1.html" class="boton">Audio guiado</a>
+    <br /><br />
+    <a href="index.html" class="boton">Volver a la página principal</a>
   </div>
 </body>
 </html>
+
