Actualizar botón para redirigir a semana1.html

--- a/TecnicasAnsiedad.html
+++ b/TecnicasAnsiedad.html
@@ -19,10 +19,11 @@
     </ul>
 
     <br />
-    <a href="audio1.html" class="boton">Audio guiado</a>
+    <a href="semana1.html" class="boton">Semana 1 - Respiración Diafragmática</a>
     <br /><br />
     <a href="index.html" class="boton">Volver a la página principal</a>
   </div>
 </body>
 </html>
+
 
