--- a/semana1.html
+++ b/semana1.html
@@ -22,13 +22,7 @@
 
     <h3>2. Audio/Video Guía de Relajación</h3>
     <p>Disfrutá de esta meditación guiada para calmar la mente:</p>
-    <iframe width="100%" height="315"
-      src="https://www.youtube.com/embed/pDigD65kLpE"
-      title="Meditación Guiada para CALMAR LA MENTE"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/pDigD65kLpE" title="Meditación Guiada para CALMAR LA MENTE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <h3>3. Ejercicio Diario de Respiración</h3>
     <ul>
@@ -76,7 +70,6 @@
       <li><strong>2</strong> cosas que podés oler</li>
       <li><strong>1</strong> cosa que podés saborear</li>
     </ul>
-    <p>Este ejercicio entrena tu atención y reduce pensamientos intrusivos.</p>
 
     <h3>9. Checklist de práctica</h3>
     <p>Marcá lo que lograste hoy:</p>
@@ -88,7 +81,6 @@
     </form>
 
     <h3>10. ¿Qué puedo esperar sentir después de aplicar estas técnicas?</h3>
-    <p>Al finalizar esta primera semana, es esperable que empieces a notar una mayor conexión con tu cuerpo y un leve descenso en los niveles de tensión y ansiedad. Tal vez no desaparezca del todo, pero sí podrías sentirte:</p>
     <ul>
       <li>Más presente en el aquí y ahora</li>
       <li>Con mayor sensación de control sobre tu respiración y cuerpo</li>
@@ -96,13 +88,23 @@
       <li>Menos reactivo/a ante estímulos estresantes</li>
     </ul>
 
-    <p><strong>¿Con qué frecuencia practicar?</strong></p>
-    <ul>
-      <li><strong>Respiración consciente:</strong> Al menos 2 veces por día (mañana y noche), durante 5 minutos</li>
-      <li><strong>Técnica 5-4-3-2-1:</strong> Cada vez que sientas ansiedad intensa</li>
-      <li><strong>Diario emocional:</strong> Una vez al día, preferentemente por la noche</li>
-      <li><strong>Audio de relajación:</strong> 1 vez por día o cuando lo necesites</li>
-    </ul>
+    <h3>11. Estado emocional del día</h3>
+    <select id="estadoAnimo">
+      <option value="">Seleccioná una emoción</option>
+      <option value="tranquilo">Tranquilo/a</option>
+      <option value="estresado">Estresado/a</option>
+      <option value="motivado">Motivado/a</option>
+      <option value="triste">Triste</option>
+    </select>
+
+    <h3>12. Objetivo del día</h3>
+    <input type="text" id="objetivoHoy" placeholder="Ej: Respirar consciente antes de dormir">
+
+    <h3>13. Consejo del día</h3>
+    <p id="consejo"></p>
+
+    <h3>14. Tu frase motivacional</h3>
+    <input type="text" id="miFrase" placeholder="Escribí tu propia frase">
 
     <br><br>
     <a href="TecnicasAnsiedad.html" class="boton">Volver a Técnicas</a>
@@ -126,6 +128,26 @@
 
       document.getElementById("resultadoMiniTest").innerText = mensaje;
     }
+
+    // Consejo aleatorio
+    const consejos = [
+      "Tomá una pausa de 5 minutos sin pantallas.",
+      "Respirá profundamente antes de responder cuando estés estresado.",
+      "No te juzgues por tener ansiedad. Escuchate.",
+      "La calma se construye paso a paso. Estás en camino."
+    ];
+    document.getElementById('consejo').innerText = consejos[Math.floor(Math.random() * consejos.length)];
+
+    // Guardar checklist en localStorage
+    document.querySelectorAll('#checklist input[type="checkbox"]').forEach((box, i) => {
+      box.checked = localStorage.getItem('check' + i) === 'true';
+      box.addEventListener('change', () => {
+        localStorage.setItem('check' + i, box.checked);
+      });
+    });
   </script>
 </body>
 </html>
+
+
+
