--- a/TecnicasAnsiedad.html
+++ b/TecnicasAnsiedad.html
@@ -20,6 +20,7 @@
 
     <br />
     <a href="semana1.html" class="boton">Semana 1 - Respiración Diafragmática</a>
+    <a href="semana2.html" class="boton">Semana 2: Reencuadre Cognitivo</a>
     <br /><br />
     <a href="index.html" class="boton">Volver a la página principal</a>
   </div>
