actualizo semana1 y semana2

--- a/semana1.html
+++ b/semana1.html
@@ -23,6 +23,9 @@
     <h3>2. Audio/Video Guía de Relajación</h3>
     <p>Disfrutá de esta meditación guiada para calmar la mente:</p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/pDigD65kLpE" title="Meditación Guiada para CALMAR LA MENTE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p style="font-size: 0.9em;">
+  Fuente: Video original de <a href="https://www.youtube.com/@MeditaConmigo" target="_blank">Medita Conmigo</a> en YouTube.
+</p>
 
     <h3>3. Ejercicio Diario de Respiración</h3>
     <ul>
