--- a/semana2.html
+++ b/semana2.html
@@ -23,6 +23,10 @@
     <h3>2. Video Explicativo</h3>
     <p>Aprendé cómo funciona el reencuadre cognitivo y cómo aplicarlo en tu vida diaria:</p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/QZpECpHTsQg" title="¿Qué es la Reestructuración Cognitiva?" frameborder="0" allowfullscreen></iframe>
+    <p style="font-size: 0.9em;">
+  Fuente: Video original de <a href="https://www.youtube.com/@PsicologoEnCasa" target="_blank">Psicólogo en Casa</a> en YouTube.
+</p>
+
 
     <h3>3. Identificá la distorsión cognitiva</h3>
     <select>
