--- a/TecnicasAnsiedad.html
+++ b/TecnicasAnsiedad.html
@@ -21,6 +21,8 @@
     <br />
     <a href="semana1.html" class="boton">Semana 1 - Respiración Diafragmática</a>
     <a href="semana2.html" class="boton">Semana 2: Reencuadre Cognitivo</a>
+    <a href="semana3.html" class="boton">Semana 3: Relajación Muscular Progresiva</a>
+
     <br /><br />
     <a href="index.html" class="boton">Volver a la página principal</a>
   </div>
