--- a/semana3.html
+++ b/semana3.html
@@ -39,7 +39,8 @@
     <blockquote><em>"Aflojá el cuerpo, relajá la mente. Cada músculo relajado es un paso hacia la calma."</em></blockquote>
 
     <h3>6. ¿Sabías que...?</h3>
-    <p>La relajación muscular progresiva reduce cortisol y disminuye la sensación de tensión :contentReference[oaicite:2]{index=2}.</p>
+<p>La relajación muscular progresiva reduce los niveles de cortisol y disminuye significativamente la sensación de tensión física y mental.</p>
+
 
     <h3>7. Mini‑test</h3>
     <form id="miniTest">
