--- a/TecnicasAnsiedad.html
+++ b/TecnicasAnsiedad.html
@@ -22,6 +22,8 @@
     <a href="semana1.html" class="boton">Semana 1 - Respiración Diafragmática</a>
     <a href="semana2.html" class="boton">Semana 2: Reencuadre Cognitivo</a>
     <a href="semana3.html" class="boton">Semana 3: Relajación Muscular Progresiva</a>
+    <a href="semana4.html" class="boton">Semana 4: Exposición Gradual</a>
+
 
     <br /><br />
     <a href="index.html" class="boton">Volver a la página principal</a>
